Fix more spacing issues

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -88,7 +88,7 @@ $spacers: map-merge(
 }
 
 // Headers
-h3 { margin-top: 6rem; margin-bottom: 1.5rem; }
+h3 { margin-top: 6rem; margin-bottom: 1.5rem; font-size: 2.6em; }
 h4 { margin-bottom: 0.8rem; }
 
 // Single elements
@@ -123,10 +123,4 @@ pre {
 
 .book-section {
   margin-bottom: 3rem;
-}
-
-.monkey-implementation {
-  .description {
-    // font-style: italic;
-  }
 }
